@@ -1,4 +1,6 @@
 0.3.0
+Removed split document view options.
+Done bookmarks.
 Fixed minor bug not scrolling to line when jumping to function in file that needs to be opened.
 Redone 'Go Back'.
 Moved some routines to widget callbacks.
